--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,33 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next", "prettier"],
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "rules": {
+    "@next/next/no-img-element": 0,
+    "import/no-unresolved": 2,
+    "import/export": 0,
+    "jsx-a11y/alt-text": 2,
+    "no-undef": 1,
+    "no-unused-vars": 1,
+    "no-console": 1,
+    "prefer-const": 1,
+    "object-shorthand": 1,
+    "react/no-unused-prop-types": [
+      2,
+      {
+        "skipShapeProps": true
+      }
+    ],
+    "react/self-closing-comp": 2
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": ["node_modules", "src/"]
+      }
+    }
+  }
 }
